test/lattests/extensions/objects1/bad/methodNamedSelf.lat
class a {
    int self(int x) { return 1; }
}

int main() { return 0; }